<resources>
    <string name="app_name">USSRPG_v.0.1</string>
    <string name="Lobby">Lobby</string>
    <string name="Pool">Pool</string>
    <string name="Create">Create</string>
    <string name="Select">Select</string>
    <string name="add_attribute">Add Attribute to Active Character</string>
    <string name="search">Search</string>
    <string name="search_hint">Search by Name or XP</string>
    <string name="TestName">New Test Character</string>
    <string name="TestXPValue">10</string>
    <string name="create_new_character">Create New Character</string>
    <string name="xpBrand">XP:</string>
    <string name="hp">HP:</string>
    <string name="sp">SP:</string>
    <string name="cp">CP:</string>
    <string name="dicePoolHint">X</string>
</resources>
