<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_create"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/create_new_character"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_add_attribute"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/add_attribute"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="Edit Active Character"
        app:showAsAction="ifRoom"/>

    <!--<item android:id="@+id/action_search"-->
        <!--android:icon="@android:drawable/ic_menu_search"-->
        <!--android:title="@string/search"-->
        <!--app:showAsAction="ifRoom"-->
        <!--app:actionViewClass="android.support.v7.widget.SearchView"/>-->

</menu>