<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.CharacterSelectionActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/my_toolbar_elevation"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:titleTextColor="#ffffff"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/my_toolbar"-->
        <!--android:text="Character Selection Screen"/>-->
    <ListView
        android:id="@+id/pcList"
        android:layout_below="@id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

</RelativeLayout>
